--- a/index.html
+++ b/index.html
@@ -449,7 +449,9 @@
       <h3 class="no-margin fz-18 lh-1_2 fw-700 sm-mgb-2 md-mgb-3">En direct</h3>
       <p class="no-margin fz-14 lh-1_8"><a class="no-underline" href="tel:+33626348271">06 26 34 82 71</a></p>
       <p class="no-margin fz-14 lh-1_8"><a class="no-underline" href="mailto:contact@fastandgo.eu">contact@fastandgo.eu</a></p>
-      <h3 class="no-margin fz-18 lh-1_2 fw-700 sm-mgb-2 md-mgb-3 sm-mgt-4 md-mgt-10">Nous suivre</h3>
+    </div>
+    <div class="sm-column-12 md-column-6 sm-mgt-5 md-mgt-0">
+      <h3 class="no-margin fz-18 lh-1_2 fw-700 sm-mgb-2 md-mgb-3">Nous suivre</h3>
       <div class="flex sm-layout-row md-layout-column">
         <a href="" class="flex align-start-center no-underline fz-14 lh-1_2 md-mgb-3">
           <div class="w-5 h-5 bg-yellow round flex align-center-center sm-mgr-4 md-mgr-2"><svg class="w-3 h-3"><use xlink:href="#icon-facebook" /></svg></div>
@@ -464,48 +466,7 @@
           <span class="sm-dp-none md-dp-inl">Instagram</span>
         </a>
       </div>
-    </div>
-    <div class="sm-column-12 md-column-6 sm-mgt-5 md-mgt-0">
-      <form id="contact-form" class="bg-pattern bg-gray sm-pgh-2 sm-pgv-3 md-pg-4">
-        <h3 class="no-margin fz-18 lh-1_2 fw-700 mgb-3">Message</h3>
-        <label for="function" class="sm-mgb-2 md-mgb-3">
-          <div>Vous êtes</div>
-          <select name="function" id="function" required>
-            <option value="Brasseurs/Caviste">Brasseurs/Caviste</option>
-            <option value="Cafés/Hôtels/Restaurants">Cafés/Hôtels/Restaurants</option>
-            <option value="Organisateurs d'évènements">Organisateurs d'évènements</option>
-            <option value="Stades/Salles">Stades/Salles</option>
-            <option value="Traiteurs">Traiteurs</option>
-            <option value="Festivals">Festivals</option>
-            <option value="Autre">Autre</option>
-          </select>
-        </label>
-        <label for="first_name" class="sm-mgb-2 md-mgb-3">
-          <div>Prénom</div>
-          <input type="text" name="first_name" id="first_name" placeholder="Laurent" required>
-        </label>
-        <label for="last_name" class="sm-mgb-2 md-mgb-3">
-          <div>Nom</div>
-          <input type="text" name="last_name" id="last_name" placeholder="Dupont" required>
-        </label>
-        <label for="email" class="sm-mgb-2 md-mgb-3">
-          <div>Email</div>
-          <input type="email" name="email" id="email" placeholder="laurent.dupont@mail.com" required>
-        </label>
-        <label for="phone" class="sm-mgb-2 md-mgb-3">
-          <div>Téléphone</div>
-          <input type="phone" name="phone" id="phone" placeholder="06 00 00 00 00" required>
-        </label>
-        <label for="message" class="sm-mgb-2 md-mgb-3">
-          <div>Message <span>(facultatif)</span></div>
-          <textarea name="message" id="message" rows="10"></textarea>
-        </label>
-        <input type="checkbox" name="checkbox" id="contact_ok">
-        <label for="contact_ok" class="sm-mgb-2 md-mgb-3">J’accepte que Fast and Go utilise mes données pour prendre contact avec moi.</label>
-        <div class="flex align-end-center size-100p">
-          <button class="button black sm-size-100p md-size-auto disabled">Envoyer</button>
-        </div>
-      </form>
+
     </div>
   </div>
 </div>
