--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </a>
   <div class="hero__video">
     <video preload="auto" autoplay="autoplay" loop="loop" muted="true" id="vimeo-hero">
-      <source src="https://fpdl.vimeocdn.com/vimeo-prod-skyfire-std-us/01/2065/12/310325886/1194121711.mp4?token=1547050765-0x8c75c5b35c45a51df5a02cf18c5257324998e1c1&download=1&filename=FAST%26GO.mp4" type="video/mp4">
+      <source src="img/video.mp4" type="video/mp4">
     </video>
   </div>
 </div>
