Add thumbnail to hero video

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <svg class="w-5 h-5"><use xlink:href="#icon-scroll" /></svg>
   </a>
   <div class="hero__video">
-    <video preload="auto" autoplay="autoplay" loop="loop" muted="true" id="vimeo-hero">
-      <source src="img/video.mp4" type="video/mp4">
+    <video preload="metadata" autoplay="autoplay" loop="loop" muted="true" id="vimeo-hero">
+      <source src="img/video.mp4#t=0.5" type="video/mp4">
     </video>
   </div>
 </div>
