Add favicon and video background

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <meta name="language" content="fr-FR" />
     <title>Fast And Go | Pompe Bière Innovante Design Gobelet Fond Hauts de France</title>
     <meta name="description" content="FAST and GO Concept a créé un nouveau concept breveté de tirage de la bière pression pour faciliter et accélérer le service de la bière.">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+    <meta name="apple-mobile-web-app-title" content="Fast &amp; Go">
+    <meta name="application-name" content="Fast &amp; Go">
+    <meta name="msapplication-TileColor" content="#000000">
+    <meta name="theme-color" content="#000000">
 
     <!--Scripts-->
 
@@ -59,8 +68,8 @@
     <svg class="w-5 h-5"><use xlink:href="#icon-scroll" /></svg>
   </a>
   <div class="hero__video">
-    <video preload="metadata" autoplay="autoplay" loop="loop" muted="true" id="vimeo-hero">
-      <source src="img/video.mp4#t=0.5" type="video/mp4">
+    <video preload="auto" placeholder="img/video_background.jpg" autoplay="autoplay" loop="loop" muted="true" id="vimeo-hero">
+      <source src="img/video.mp4" type="video/mp4">
     </video>
   </div>
 </div>
