Update video placeholder

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <svg class="w-5 h-5"><use xlink:href="#icon-scroll" /></svg>
   </a>
   <div class="hero__video">
-    <video preload="auto" placeholder="img/video_background.jpg" autoplay="autoplay" loop="loop" muted="true" id="vimeo-hero">
+    <video preload="auto" poster="img/video_background.jpg" autoplay="autoplay" loop="loop" muted="true" id="vimeo-hero">
       <source src="img/video.mp4" type="video/mp4">
     </video>
   </div>
