Add google analytics code

--- a/index.html
+++ b/index.html
@@ -587,18 +587,16 @@ Fast & Go Concept conçoit, fabrique et commercialise une solution permettant au
 <script src="https://s.electerious.com/basicScroll/dist/basicScroll.min.js"></script>
 <script src="js/bundle.min.js"></script>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-106556182-1', 'auto');
+  ga('send', 'pageview');
 
-    ga('create', '', 'auto');
-    ga('send', 'pageview');
-
-  </script>
-
+</script>
   </body>
 </html>
 
