--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
         <label for="function" class="sm-mgb-2 md-mgb-3">
           <div>Vous êtes</div>
           <select name="function" id="function" required>
-            <option value="Brasseurs/Caviste">Brasseurs/Caviste</option>
+            <option value="Brasseurs/Caviste">Brasseurs/Cavistes</option>
             <option value="Cafés/Hôtels/Restaurants">Cafés/Hôtels/Restaurants</option>
             <option value="Organisateurs d'évènements">Organisateurs d'évènements</option>
             <option value="Stades/Salles">Stades/Salles</option>
