--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
       <form id="contact-form" class="bg-pattern bg-gray sm-pgh-2 sm-pgv-3 md-pg-4">
         <h3 class="no-margin fz-18 lh-1_2 fw-700 mgb-3">Message</h3>
         <label for="function" class="sm-mgb-2 md-mgb-3">
-          <div>Vous êtes</div>
+          <div>Vous êtes*</div>
           <select name="function" id="function" required>
             <option value="Brasseurs/Caviste">Brasseurs/Cavistes</option>
             <option value="Cafés/Hôtels/Restaurants">Cafés/Hôtels/Restaurants</option>
@@ -485,19 +485,19 @@
           </select>
         </label>
         <label for="first_name" class="sm-mgb-2 md-mgb-3">
-          <div>Prénom</div>
+          <div>Prénom*</div>
           <input type="text" name="first_name" id="first_name" placeholder="Laurent" required>
         </label>
         <label for="last_name" class="sm-mgb-2 md-mgb-3">
-          <div>Nom</div>
+          <div>Nom*</div>
           <input type="text" name="last_name" id="last_name" placeholder="Dupont" required>
         </label>
         <label for="email" class="sm-mgb-2 md-mgb-3">
-          <div>Email</div>
+          <div>Email*</div>
           <input type="email" name="email" id="email" placeholder="laurent.dupont@mail.com" required>
         </label>
         <label for="phone" class="sm-mgb-2 md-mgb-3">
-          <div>Téléphone</div>
+          <div>Téléphone*</div>
           <input type="phone" name="phone" id="phone" placeholder="06 00 00 00 00" required>
         </label>
         <label for="message" class="sm-mgb-2 md-mgb-3">
@@ -505,7 +505,7 @@
           <textarea name="message" id="message" rows="10"></textarea>
         </label>
         <input type="checkbox" name="checkbox" id="contact_ok">
-        <label for="contact_ok" class="sm-mgb-2 md-mgb-3">J’accepte que Fast and Go utilise mes données pour prendre contact avec moi.</label>
+        <label for="contact_ok" class="sm-mgb-2 md-mgb-3">J’accepte que Fast and Go utilise mes données pour prendre contact avec moi.*</label>
         <div class="flex align-end-center size-100p">
           <button class="button black sm-size-100p md-size-auto disabled">Envoyer</button>
         </div>
